[project]
name = "soundcheck"
description = "A multi-processing audio check"
version = "0.0.1"
dependencies = ["audioread", "tqdm", "click", "prettytable", "format_duration"]
license = { file = "LICENSE" }
readme = "README.md"

classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
]

[project.urls]
Homepage = "https://github.com/seanghay/soundcheck"
Repository = "https://github.com/seanghay/soundcheck"

[[project.authors]]
name = "Seanghay Yath"
email = "seanghay.dev@gmail.com"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["soundcheck"]


[tool.ruff]
indent-width = 2

[tool.ruff.lint]
ignore = ["E741"]

[project.scripts]
soundcheck = "soundcheck:cli.cli"
